force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/tc9_edc__Setup_Core_T2P_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Date and time of last creation/update core Time2Pay setup data</description>
    <label>Setup Core T2P Data</label>
</CustomObject>