force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Custom_Setting__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Custom_Setting__c</fullName>
    <label>Custom Setting</label>
    <type>DateTime</type>
</CustomField>