force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Invoice_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Invoice_Tax_ID__c</fullName>
    <label>Invoice Tax ID</label>
    <type>DateTime</type>
</CustomField>