force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Notification_Settings__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Notification_Settings__c</fullName>
    <label>Notification Settings</label>
    <type>DateTime</type>
</CustomField>