force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Rate_Calc_Calculation_Methods__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Rate_Calc_Calculation_Methods__c</fullName>
    <label>Rate Calc Calculation Methods</label>
    <type>DateTime</type>
</CustomField>