force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Rate_Calc_Locations__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Rate_Calc_Locations__c</fullName>
    <label>Rate Calc Locations</label>
    <type>DateTime</type>
</CustomField>