force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Timesheet_Calendars__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Timesheet_Calendars__c</fullName>
    <description>Shows the date and time when the process generated the timesheet calendar. This field gets stamped even if this process is skipped initially.</description>
    <inlineHelpText>Shows the date and time when the process generated the timesheet calendar. This field gets stamped even if this process is skipped initially.</inlineHelpText>
    <label>Timesheet Calendars</label>
    <type>DateTime</type>
</CustomField>