force-app/main/default/objects/tc9_edc__Setup_Core_T2P_Data__c/fields/tc9_edc__Work_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Work_Schedule__c</fullName>
    <label>Work Schedule</label>
    <type>DateTime</type>
</CustomField>